# app/Models/Source.php
@@ -22,19 +22,19 @@ class Source extends Model
     protected static function booted(): void
     {
         static::deleting(function (Source $source) {
-            if ($source->sourceMappings()->exists()) {
+            if ($source->sourceNutrients()->exists()) {
                 throw new SourceHasNutrientsException();
             }
         });
     }
 
-    public function sourceMappings(): HasMany
+    public function sourceNutrients(): HasMany
     {
-        return $this->hasMany(NutrientSourcePivot::class);
+        return $this->hasMany(SourceNutrient::class);
     }
 
     public function nutrients(): HasManyThrough
     {
-        return $this->hasManyThrough(Nutrient::class, NutrientSourcePivot::class, 'source_id', 'id', 'id', 'nutrient_id');
+        return $this->hasManyThrough(Nutrient::class, SourceNutrient::class, 'source_id', 'id', 'id', 'nutrient_id');
     }
 }
